# geometry

./: CMakeLists.txt
example/: app.cpp
include/geometry/: CMakeLists.txt
include/geometry/shape/: CMakeLists.txt
include/geometry/square/: CMakeLists.txt  square.h
src/shape/: CMakeLists.txt  printer.h  shape.cpp
src/square/: CMakeLists.txt  info.h  square.cpp
